src/styles/main.css
:root {
  --white: #fff;
  --deep-black: #000;
  --deep-black-100: #171718;
  --deep-black-200: #26292d;
  --light-blue-50: #3538cd;
  --light-blue-100: #0062b9;
  --light-blue-200: #3073c5;
  --light-blue-300: #0e4ad1;
  --light-blue-400: #eef4ff;
  --light-red-100: #c11574;
  --light-red-200: #fdf2fa;
  --light-grey: #777;

  /* Nav */
  --nav-bg: var(--deep-black-100);
  --nav-border: var(--deep-black-200);
  --nav-text: var(--deep-black);

  /* Header */
  --header-bg: var(--white);
  --header-text: var(--white);

  /* Footer */
  --footer-bg: var(--deep-black-100);
  --footer-text: var(--white);

  /* Border-radius */
  --border-rs: 8px;

  /* Light mode */
  --page-bg: var(--white);
  --text-color: var(--deep-black-100);
  --accent: var(--light-purple-100);
  --title-1: var(--accent);
  --grey: #fafafa;
  --project-card-bg: var(--white);
  --project-card-text: var(--deep-black-100);
  --box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
  --gradient: linear-gradient(
    to right,
    rgba(0, 98, 185, 0.8),
    rgba(0, 98, 185, 0.8)
  );
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

input:focus,
button:focus,
a:focus,
textarea:focus {
  outline: none;
}

button {
  border: none;
  cursor: pointer;
}

textarea {
  resize: none;
}

html {
  font-size: 62.5%;
}

body {
  min-width: 320px;
  font-family: 'Open Sans', sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.2;
  scroll-behavior: smooth;
  background-color: var(--page-bg);
}

img {
  width: 100%;
  vertical-align: middle;
}

/* General */

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.container {
  max-width: 120rem;
  margin: 0 auto;
}

::-webkit-scrollbar {
  display: none;
}

@media only screen and (max-width: 98.25em) {
  html {
    font-size: 56%;
  }

  .container {
    width: 95%;
  }
}

@media only screen and (max-width: 56.25em) {
  html {
    font-size: 56%;
  }
}

@media only screen and (max-width: 37.5em) {
  html {
    font-size: 59%;
  }

  .container {
    width: 90%;
  }
}

@media only screen and (min-width: 112.5em) {
  html {
    font-size: 65%;
  }
}

